--- a/scss/utils/_mixins.scss
+++ b/scss/utils/_mixins.scss
@@ -81,3 +81,8 @@
         @content;
     }
 }
+@mixin mobileLandscape{
+    @media screen and (max-height:450px) and (orientation: landscape) {
+        position: static;
+    }
+}
